力技だがアップロードした画像をOGPに設定し、再編集時にもうまく動くようにした

--- a/skel/edit.html
+++ b/skel/edit.html
@@ -31,7 +31,7 @@
 		<$art_day  = art.day>
 	<$end>
 	<$v.subtitle = "&#x270D;) " . art.title>
-	
+
 <$else>
 	<$art.name    = Auth.name>
 	<$art.enable  = s.enable>
@@ -136,7 +136,7 @@
 	<br>
 
 	<div>
-	<span class="element" id="edit-title"><span class="edit-caption">タイトル</span><input class="w360 no-enter-submit" type="text" name="title" value="<@art.title>"></span> 
+	<span class="element" id="edit-title"><span class="edit-caption">タイトル</span><input class="w360 no-enter-submit" type="text" name="title" value="<@art.title>"></span>
 	<div id="edit-helper">
 	<button class="helper" type="button" data-type="head"   data-msg="見出しを作ります">見出し</button>
 	<button class="helper" type="button" data-type="strong" data-msg="太字にしたい文字列を入力">太字</button>
@@ -241,6 +241,12 @@
 			</select></li>
 			<li>コンテンツkey<span class="help" data-help='"http://", "https://" や "/" ではじまるkeyを指定すると指定URLへのリンクになります。"FrontPage", "top", "index"のいずれかを指定するとブログトップの固定記事になります。'>?</span><input type="text" name="link_key_txt" id="link-key" class="w240" value="<@if(art.ctype, esc(art.link_key))>" data-suggest="<@s.suggest_link_key>"></li>
 		</ul>
+		</li>
+		<li>
+			<label>
+				<span class="edit-caption">サムネ</span>
+				<input class="w360" type="text" name="ogp" value="<@art.main_image>" placeholder="[image:S:adiary/2025/01/:20241225_195853281.JPG:20241225_195853281.JPG]">
+			</label>
 		</li>
 	</ul>
 
