--- a/skel/_parser/default.html
+++ b/skel/_parser/default.html
@@ -11,7 +11,7 @@
 
 <#$parser.indent = "\t\t">
 <$parser.seemore_msg = s.seemore_msg || '続きを読む'>
-<$parser.image_attr  = 'data-lightbox="k%k"'>
+<$parser.image_attr  = 'data-fancybox="k%k"'>
 
 タグ置換用データ
 <$local(img) = v.blogimg_dir()>
