--- a/skel/_parser/rst.html
+++ b/skel/_parser/rst.html
@@ -32,6 +32,6 @@
 	Sphinx等との互換性を重要視する場合は false のままにする。
 
 <$parser.image_path = v.blogimg_dir()>
-<$parser.image_attr = 'data-lightbox="k%k"'>
+<$parser.image_attr = 'data-fancybox="k%k"'>
 
 <$return(parser)>
