変数展開している箇所をシングルクォート括りから、ダブルクォート括りに変更。意味はなさそう

--- a/skel/_frame.html
+++ b/skel/_frame.html
@@ -67,11 +67,11 @@
 <link rel="stylesheet" href="<@Basepath><@v.script_dir>jquery.fancybox.min.css">
 <script src="<@Basepath><@v.script_dir>jquery-3.2.1.min.js"></script>
 <script src="<@Basepath><@v.script_dir>jquery.fancybox.min.js"></script>
-<script src='<@Basepath><@v.script_dir>prism-core.min.js'></script>
-<script src='<@Basepath><@v.script_dir>prism-autoloader.min.js'></script>
-<script src='<@Basepath><@v.script_dir>prism-line-numbers.min.js'></script>
-<script src='<@Basepath><@v.script_dir>prism-toolbar.min.js'></script>
-<script src='<@Basepath><@v.script_dir>prism-copy-to-clipboard.min.js'></script>
+<script src="<@Basepath><@v.script_dir>prism-core.min.js"></script>
+<script src="<@Basepath><@v.script_dir>prism-autoloader.min.js"></script>
+<script src="<@Basepath><@v.script_dir>prism-line-numbers.min.js"></script>
+<script src="<@Basepath><@v.script_dir>prism-toolbar.min.js"></script>
+<script src="<@Basepath><@v.script_dir>prism-copy-to-clipboard.min.js"></script>
 <script>
   document.addEventListener('DOMContentLoaded', () => {
     $('[data-fancybox]').fancybox();
