--- a/skel/_frame.html
+++ b/skel/_frame.html
@@ -129,7 +129,7 @@
 <footer id="footer" data-module-name="def_footer" data-fix="1"><div><!--フッタ-->
 <@ps.footer_txt>
 <@ifexec(ps.outver ne '0', begin)>
-<div class="adiary"><a href="https://adiary.org/" title="High Performance CMS">adiary</a> Version <@v.OUTVERSION> / Extends Version <@v.EXTENDS_VERSION></div>
+<div class="adiary"><a href="https://adiary.org/" title="High Performance CMS">adiary</a> Version <@v.OUTVERSION> / <a href="https://github.com/Lycolia/adiary-extends" title="Forked adiary extended">Extends</a> Version <@v.EXTENDS_VERSION></div>
 <$end>
 </div></footer>
 </div> <!-- End of #adiary-body -->
